--- a/index.html
+++ b/index.html
@@ -99,12 +99,12 @@ width="200px" height="200px"/></p>
             <td style="border:1px solid #696969">23 ноября 2022</td>
         </tr>
         <tr>
-            <td>3</td>
-            <td>3</td>
-            <td>«Friend Or Woe»</td>
-            <td>Тим Бёртон</td>
-            <td>Альфред Гоф и Майлз Миллар </td>
-            <td>23 ноября 2022</td>
+            <td style="border:1px solid #696969">3</td>
+            <td style="border:1px solid #696969">3</td>
+            <td style="border:1px solid #696969">«Friend Or Woe»</td>
+            <td style="border:1px solid #696969">Тим Бёртон</td>
+            <td style="border:1px solid #696969">Альфред Гоф и Майлз Миллар </td>
+            <td style="border:1px solid #696969">23 ноября 2022</td>
             <tr>
                 <td  style="border:1px solid #696969">4</td>
             <td  style="border:1px solid #696969">4</td>
